# desktop

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  Makefile  README.md  chat.qxp.desktop  flake.nix  shell.nix
.agents/skills/changelog/: SKILL.md
.agents/skills/releaser/: SKILL.md
.github/workflows/: release.yml
assets/scripts/: generate-logo.py  render.sh
desktop/: .gitignore  AGENTS.md  Makefile  README.md  shell.nix
desktop/.claude/: settings.local.json
desktop/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/frontend/public/: manifest.webmanifest
desktop/frontend/src/: app.ts  vite-env.d.ts
desktop/scripts/: sync-strings.mjs  sync-versions.py  sync-versions.sh
desktop/server/: Cargo.toml
desktop/server/src/: assets.rs  lib.rs  main.rs  rpc.rs  upload.rs  ws.rs
desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
desktop/tests/: .env.example  README.md  package-lock.json  playwright.config.ts
desktop/tests/fixtures/: accounts.ts  app-paired.ts  app.ts  daemon.ts
desktop/tests/helpers/: selectors.ts  setup.ts  timeouts.ts
desktop/tests/scripts/: ensure-pool.mjs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/locales/: bg.json  cs.json  da.json  de.json  el.json  en.json  es.json  fi.json  fr.json  hu.json  it.json  nl.json  no.json  pl.json  pt.json  ro.json  ru.json  sk.json  sv.json  tr.json  uk.json
frontend/src/: app.ts  vite-env.d.ts
frontend/src/chat/: AttachMenu.svelte  AttachmentBar.svelte  ChatPicker.svelte  ChatView.svelte  Composer.svelte  ContactPickerModal.svelte  ContactRequestBar.svelte  ContextMenu.svelte  DeleteMessageDialog.svelte  EmojiPicker.svelte  FullMessageOverlay.svelte  GifPendingPill.svelte  GifPicker.svelte  ImageLightbox.svelte  InChatSearch.svelte  LocationPicker.svelte  MessageBubble.svelte  MessageGallery.svelte  MultiSendConfirm.svelte  PendingMediaRow.svelte  QuoteBar.svelte  ReactionDetailSheet.svelte  ReactionsRow.svelte  ScrollToLatest.svelte
frontend/src/compose/: ChooseMembers.svelte  ComposePane.svelte  ContactRow.svelte  ContactRowMenu.svelte  GroupMetadata.svelte
frontend/src/info/: ChatInfo.svelte  MediaBrowser.svelte
frontend/src/lib/: Avatar.svelte  AvatarEditor.svelte  BackButton.svelte  Badge.svelte  ConfirmDialog.svelte  Icon.svelte  IconButton.svelte  ImageCropperDialog.svelte  InlineMarkdown.svelte  MenuItem.svelte  Modal.svelte  Overlay.svelte  QrScanArea.svelte  SearchField.svelte  SegmentedControl.svelte  Select.svelte  SettingsRow.svelte  SettingsSection.svelte  TextInput.svelte  Toast.svelte  chatActions.ts  clipboard.ts  dragdrop.svelte.ts  files.ts  inviteUrl.ts  prefs.svelte.ts  rpc.ts  shortcuts.ts  windowSize.ts
frontend/src/onboarding/: BackupImport.svelte  BackupReceive.svelte  Instant.svelte  ManualLogin.svelte  Onboarding.svelte  ProgressOverlay.svelte  ProxyDialog.svelte  SignupScan.svelte  Welcome.svelte
frontend/src/qr/: QrDispatcher.svelte  QrShow.svelte  Scanner.svelte
frontend/src/settings/: About.svelte  AddSecondDevice.svelte  Appearance.svelte  Backup.svelte  BlockedContacts.svelte  ChatsAndMedia.svelte  Connectivity.svelte  Logs.svelte  Profile.svelte  Proxy.svelte  Settings.svelte  ShareProxy.svelte  TransportForm.svelte
frontend/src/shell/: App.svelte  ChatListPane.svelte  ChatListRow.svelte  ChatRowMenu.svelte  DeleteChatDialog.svelte  ForwardFlow.svelte  MainPane.svelte  NavTabs.svelte  RailToggle.svelte  Splitter.svelte
frontend/src/styles/: theme.css  tokens.css
plans/: MVP.md  chats-settings.md  chatview-bugfix-pass.md  chatview-uikit-rewrite.md  chatview-uikit.md  code-review.md  connectivity.md  desktop-review-prompt.md  desktop-review-refactor.md  desktop.md  e2e-tests.md  errors.md  groups.md  hardening.md  in-chat-media-browser.md  msg-funcs.md  notifications.md  onboarding.md  push-notifications.md  qr.md  share-extension.md  uikit.md
scripts/: sync-strings.mjs  sync-versions.sh
server/: Cargo.toml
server/src/: file.rs  lib.rs  main.rs  ws.rs
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  resume_from_sleep.rs  tray.rs
tests/: README.md  package.json  playwright.config.ts  pool.example.json  tsconfig.json
tests/fixtures/: accounts.ts  app-paired.ts  app-trio.ts  app.ts  daemon.ts
tests/helpers/: media.ts  selectors.ts  setup.ts
tests/scripts/: ensure-pool.mjs
tests/specs/00-smoke/: launch.spec.ts
tests/specs/01-onboarding/: backup-import.spec.ts  backup-receive.spec.ts  backup-too-new.spec.ts  cancel-onboarding.spec.ts  configure-progress.spec.ts  instant-with-avatar.spec.ts  manual-smtp-creds.spec.ts  provider-hint.spec.ts  proxy-during-onboarding.spec.ts  signup-scan.spec.ts
tests/specs/02-chatlist/: archive-empty-hint.spec.ts  delete.spec.ts  delivery-status.spec.ts  device-chat.spec.ts  fresh-message-counter.spec.ts  keyboard-nav.spec.ts  load-and-sort.spec.ts  location-indicator.spec.ts  mark-unread.spec.ts  multi-select.spec.ts  mute.spec.ts  recently-seen.spec.ts  row-labels.spec.ts  saved-messages.spec.ts  search-add-contact.spec.ts  search.spec.ts
tests/specs/03-messaging/: attachments-audio.spec.ts  attachments-image.spec.ts  attachments-multi.spec.ts  chat-shortcuts.spec.ts  contact-request.spec.ts  day-marker.spec.ts  gif.spec.ts  image-lightbox.spec.ts  markdown.spec.ts  message-gallery.spec.ts  send-receive-text.spec.ts  vcard-encrypted-chat.spec.ts  vcard.spec.ts  voice.spec.ts
tests/specs/04-message-actions/: delete-for-everyone.spec.ts  edit.spec.ts  forward.spec.ts  multi-select.spec.ts  reactions.spec.ts
tests/specs/05-compose/: channel.spec.ts  delete-contact.spec.ts  group.spec.ts  new-email.spec.ts
tests/specs/06-group-management/: change-avatar.spec.ts  change-image.spec.ts  change-name.spec.ts  leave.spec.ts  open-member-chat.spec.ts  re-add-member.spec.ts  remove-member.spec.ts
(+258 files in other folders)
