[package]
name = "qxp-desktop"
version = "0.8.1"
edition = "2021"
description = "qxp Tauri desktop shell — wraps the qxp-web daemon + Svelte SPA in a native window."
license = "MPL-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
# OS URL-scheme handler. Registers qxp for openpgp4fpr:/dcaccount:/dclogin:/
# mailto: (see `plugins.deep-link` in tauri.conf.json) and delivers clicked
# links to the webview via the JS plugin's `onOpenUrl` / `getCurrent`.
tauri-plugin-deep-link = "2"

# Daemon is a sibling crate; we spawn it in-process on its own tokio runtime.
qxp-web = { path = "../server" }

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# macOS native bits — dock-tile badge + clipboard file-URL reads. objc2 and
# its framework crates are already pulled in transitively by tauri/wry;
# declaring them as direct deps here only affects compile-time, not link size.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSURL"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard", "NSPasteboardItem"] }

# Same dev-profile dance as the daemon — deltachat-core's transitive async
# functions need opt-level >= 1 to fit on tokio's default 2 MB worker stacks.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = "z"
