[package]
name = "qxp-desktop"
version = "0.43.0"
edition = "2021"
description = "qxp Tauri desktop shell — wraps the qxp-web daemon + Svelte SPA in a native window."
license = "MPL-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
# OS URL-scheme handler. Registers qxp for openpgp4fpr:/dcaccount:/dclogin:/
# mailto: (see `plugins.deep-link` in tauri.conf.json) and delivers clicked
# links to the webview via the JS plugin's `onOpenUrl` / `getCurrent`.
tauri-plugin-deep-link = "2"

# Daemon is a sibling crate; we spawn it in-process on its own tokio runtime.
qxp-web = { path = "../server" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
# Tauri prod-mode gate. With `custom-protocol` on, `generate_context!` embeds
# `build.frontendDist` and the webview serves it over the custom protocol;
# without it the app runs in dev mode and loads `build.devUrl` instead.
# `cargo tauri build` sets this automatically — a plain `cargo build` (the Nix
# flake) must pass `--features custom-protocol`, else the window only shows
# "could not connect to localhost".
custom-protocol = ["tauri/custom-protocol"]

# macOS native bits — dock-tile badge + clipboard file-URL reads. objc2 and
# its framework crates are already pulled in transitively by tauri/wry;
# declaring them as direct deps here only affects compile-time, not link size.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSURL"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard", "NSPasteboardItem"] }

# Linux taskbar/dock badge — emits the com.canonical.Unity.LauncherEntry
# D-Bus signal. zbus is the standard pure-Rust D-Bus crate (no libdbus).
[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5"

# Same dev-profile dance as the daemon — deltachat-core's transitive async
# functions need opt-level >= 1 to fit on tokio's default 2 MB worker stacks.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = "z"
